syntax = "proto3";

service NetworkConfig {
  rpc ConfigureInterface (InterfaceRequest) returns (InterfaceResponse);
}

message InterfaceRequest {
  string interface_name = 1;
  string ip_address = 2;
  int32 vlan_id = 3;
}

message InterfaceResponse {
  bool success = 1;
  string message = 2;
}
